code: add variables for user input

--- a/dl.cfg
+++ b/dl.cfg
@@ -1,8 +1,9 @@
 [AWS]
-AWS_ACCESS_KEY_ID='AKIAXCJWZSMH5XW7FISK'
-AWS_SECRET_ACCESS_KEY='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'
+AWS_ACCESS_KEY_ID=''
+AWS_SECRET_ACCESS_KEY=''
 
 [DATA]
-INPUT_LOG_DATA='s3://sparkify-json/log-data/*.json'
-INPUT_SONG_DATA='s3://sparkify-json/song-data/*/*/*/*.json'
-OUTPUT_DATA='s3://sparkify-json/analytics/'
+S3_BUCKET=''
+INPUT_LOG_DATA='s3://{S3_BUCKET}/log-data/*.json'
+INPUT_SONG_DATA='s3://{S3_BUCKET}/song-data/*/*/*/*.json'
+OUTPUT_DATA='s3://{S3_BUCKET}/analytics/'
